--- a/style.css
+++ b/style.css
@@ -6,7 +6,46 @@
 
 header{
   height: 100px;
-  background-color: red;
+  padding: 20px 20px 10px 20px;
+  border-bottom: 1px solid grey;
+}
+
+.top, .top-left, .top-right{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#user{
+  background-color: #7e57c2;
+  color: white;
+  line-height: 30px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 20px;
+  margin-left: 25px;
+}
+
+img{
+  width: 100px;
+  vertical-align: middle;
+}
+
+span{
+  font-size: 25px;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+
+ul li{
+  list-style: none;
+  display: inline-block;
+  margin-right: 20px;
+  padding: 10px 0;
+  font-size: 17px;
+  cursor: pointer;
 }
 
 .container{
