--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ ul li{
 .container{
   width: 1100px;
   margin: 0 auto;
-  background-color: white;
 }
 
 h2{
@@ -62,4 +61,22 @@ h2{
 p{
   padding: 20px 0;
   line-height: 25px;
+}
+
+footer{
+  margin-top: 60px;
+  height: 50px;
+  background-color: #f5f5f5;
+}
+
+.contain-footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
+  line-height: 50px;
+  color: grey;
 }
